pkgdata_DATA = acnum.hit acnum.trg division.lkp entrynam.idx \
               seqvn.hit seqvn.trg des.hit des.trg \
               keyword.hit keyword.trg taxon.hit taxon.trg \
               condiv.dat est.dat fun.dat hum1.dat inv.dat \
	       pln.dat pro.dat rod.dat \
               sts.dat syn.dat vrl.dat vrt.dat wgs.dat

pkgdatadir=$(prefix)/share/$(PACKAGE)/test/embl

