pkgdata_DATA = acnum.hit acnum.trg division.lkp entrynam.idx \
               seqvn.hit seqvn.trg des.hit des.trg \
               keyword.hit keyword.trg taxon.hit taxon.trg \
               gbbct1.seq gbest1.seq gbinv1.seq gbpln1.seq gbpln2.seq \
               gbpri1.seq gbrod1.seq gbsts1.seq gbvrl1.seq gbvrt.seq

pkgdatadir=$(prefix)/share/$(PACKAGE)/test/genbank

