pkgdata_DATA = acnum.hit acnum.trg division.lkp entrynam.idx \
               des.hit des.trg \
               keyword.hit keyword.trg taxon.hit taxon.trg \
               pir1.header pir1.names pir1.numbers pir1.offset pir1.ref \
               pir1.seq pir2.header pir2.names pir2.numbers pir2.offset \
               pir2.ref pir2.seq pir3.header pir3.names pir3.numbers \
               pir3.offset pir3.ref pir3.seq pir4.header pir4.names \
               pir4.numbers pir4.offset pir4.ref pir4.seq

pkgdatadir=$(prefix)/share/$(PACKAGE)/test/pir

