pkgdata_DATA =  abiview.1.abiview.gif \
	banana.1.banana.gif \
	chaos.1.chaos.gif cirdna.1.cirdna.gif cpgplot.1.cpgplot.gif \
	dan.2.dan.gif dotmatcher.1.dotmatcher.gif \
	dotpath.1.dotpath.gif dottup.1.dottup.gif \
	emboss_icon.gif epestfind.1.epestfind.gif \
	findkm.1.findkm.gif \
	isochore.1.isochore.gif \
	lindna.1.lindna.gif \
	octanol.1.octanol.gif \
	pepinfo.1.pepinfo.gif pepnet.1.pepnet.gif \
	pepwheel.1.pepwheel.gif pepwindow.1.pepwindow.gif \
	pepwindowall.1.pepwindowall.gif plotcon.1.plotcon.gif \
	plotorf.1.plotorf.gif plotorf.2.plotorf.gif \
	polydot.1.polydot.gif prettyplot.1.prettyplot.gif \
	prettyplot.2.prettyplot.gif \
	syco.1.syco.gif \
	tcode.2.tcode.gif tmap.1.tmap.gif \
	wobble.1.wobble.gif \
	aaindexextract.html abiview.html acd_group.html acdc.html \
	acdlog.html acdpretty.html acdtable.html acdtrace.html \
	acdvalid.html ajtest.html aligncopy.html aligncopypair.html \
	alignment_consensus_group.html \
	alignment_differences_group.html \
	alignment_dot_plots_group.html alignment_global_group.html \
	alignment_local_group.html alignment_multiple_group.html \
	antigenic.html assembly_fragment_assembly_group.html \
	backtranambig.html backtranseq.html banana.html biosed.html \
	btwisted.html \
	cai.html chaos.html charge.html checktrans.html chips.html \
	cirdna.html codcmp.html codcopy.html coderet.html \
	complex.html compseq.html cons.html consambig.html cpgplot.html \
	cpgreport.html cusp.html cutgextract.html cutseq.html \
	dan.html dbiblast.html dbifasta.html dbiflat.html \
	dbigcg.html dbxfasta.html dbxflat.html dbxgcg.html \
	degapseq.html density.html descseq.html diffseq.html \
	digest.html display_group.html distmat.html dotmatcher.html \
	dotpath.html dottup.html dreg.html \
	edialign.html edit_group.html einverted.html embossdata.html \
	embossversion.html emma.html emowse.html entret.html \
	enzyme_kinetics_group.html epestfind.html eprimer3.html \
	equicktandem.html est2genome.html etandem.html \
	extractalign.html extractfeat.html extractseq.html \
	feature_tables_group.html featcopy.html featreport.html \
	findkm.html freak.html \
	fuzznuc.html fuzzpro.html fuzztran.html \
	garnier.html geecee.html getorf.html groups.html \
	helixturnhelix.html hmm_group.html hmoment.html \
	iep.html index.html infoalign.html infobase.html \
	information_group.html \
	inforesidue.html infoseq.html isochore.html \
	jaspextract.html jaspscan.html jembossctl.html
pkgdata2_DATA = libscan.html lindna.html listor.html \
	makenucseq.html makeprotseq.html marscan.html \
	maskambignuc.html maskambigprot.html maskfeat.html \
	maskseq.html matcher.html megamerger.html menus_group.html \
	merger.html msbar.html mwcontam.html mwfilter.html \
	needle.html newcpgreport.html newcpgseek.html newseq.html \
	nohtml.html noreturn.html nospace.html notab.html \
	notseq.html nthseq.html nthseqset.html \
	nucleic_2d_structure_group.html \
	nucleic_codon_usage_group.html \
	nucleic_codon_usage_nucleic_gene_finding_group.html \
	nucleic_composition_group.html \
	nucleic_cpg_islands_group.html \
	nucleic_gene_finding_group.html nucleic_motifs_group.html \
	nucleic_mutation_group.html nucleic_primers_group.html \
	nucleic_profiles_group.html nucleic_repeats_group.html \
	nucleic_restriction_group.html \
	nucleic_rna_folding_group.html \
	nucleic_transcription_group.html \
	nucleic_translation_group.html \
	octanol.html oddcomp.html \
	palindrome.html pasteseq.html patmatdb.html \
	patmatmotifs.html pepcoil.html pepinfo.html pepnet.html \
	pepstats.html pepwheel.html pepwindow.html pepwindowall.html \
	phylogeny_consensus_group.html \
	phylogeny_continuous_characters_group.html \
	phylogeny_discrete_characters_group.html \
	phylogeny_distance_matrix_group.html \
	phylogeny_gene_frequencies_group.html phylogeny_group.html \
	phylogeny_molecular_sequence_group.html \
	phylogeny_tree_drawing_group.html plotcon.html plotorf.html \
	polydot.html preg.html prettyplot.html prettyseq.html \
	primersearch.html printsextract.html profit.html \
	prophecy.html prophet.html prosextract.html \
	protein_2d_structure_group.html \
	protein_3d_structure_group.html \
	protein_composition_group.html protein_motifs_group.html \
	protein_mutation_group.html protein_profiles_group.html \
	protein_sequence_alignment_group.html pscan.html psiphi.html \
	rebaseextract.html recoder.html redata.html remap.html \
	restover.html restrict.html revseq.html \
	seealso.html seqmatchall.html \
	seqret.html seqretsetall.html seqretsplit.html \
	showalign.html showdb.html showfeat.html showorf.html \
	showpep.html showseq.html shuffleseq.html sigcleave.html silent.html \
	sirna.html sixpack.html sizeseq.html skipredundant.html \
	skipseq.html splitsource.html splitter.html \
	stretcher.html stssearch.html supermatcher.html syco.html \
	tcode.html template.html test_group.html textsearch.html \
	tfextract.html tfm.html tfscan.html tmap.html tranalign.html \
	transeq.html trimest.html trimseq.html trimspace.html twofeat.html \
	union.html utils_database_creation_group.html \
	utils_database_indexing_group.html utils_misc_group.html \
	vectorstrip.html \
	water.html whichdb.html wobble.html wordcount.html \
	wordfinder.html wordmatch.html wossname.html \
	yank.html \
	emboss_icon.jpg

pkgdatadir=$(prefix)/share/$(PACKAGE)/doc/programs/html
pkgdata2dir=$(prefix)/share/$(PACKAGE)/doc/programs/html
