pkgdata_DATA =  aaindexextract.txt abiview.txt acdc.txt acdlog.txt \
	acdpretty.txt acdtable.txt acdtrace.txt acdvalid.txt \
	antigenic.txt backtranambig.txt backtranseq.txt \
	banana.txt biosed.txt btwisted.txt cai.txt \
	chaos.txt charge.txt checktrans.txt chips.txt \
	cirdna.txt codcmp.txt codcopy.txt coderet.txt \
	complex.txt compseq.txt cons.txt \
	cpgplot.txt cpgreport.txt \
	cusp.txt cutgextract.txt cutseq.txt dan.txt dbiblast.txt \
	dbifasta.txt dbiflat.txt dbigcg.txt dbxfasta.txt dbxflat.txt \
	dbxgcg.txt degapseq.txt descseq.txt \
	diffseq.txt digest.txt distmat.txt dotmatcher.txt dotpath.txt \
	dottup.txt dreg.txt \
        edialign.txt einverted.txt embossdata.txt embossversion.txt \
	emma.txt emowse.txt entret.txt epestfind.txt eprimer3.txt \
	equicktandem.txt est2genome.txt etandem.txt extractfeat.txt \
	extractseq.txt findkm.txt freak.txt \
	fuzznuc.txt fuzzpro.txt fuzztran.txt garnier.txt geecee.txt \
	getorf.txt helixturnhelix.txt hmoment.txt \
	iep.txt infoalign.txt infoseq.txt isochore.txt
pkgdata2_DATA = jembossctl.txt lindna.txt listor.txt \
	makenucseq.txt makeprotseq.txt \
	marscan.txt maskfeat.txt maskseq.txt matcher.txt \
	megamerger.txt merger.txt msbar.txt \
	mwcontam.txt mwfilter.txt \
	needle.txt \
	newcpgreport.txt newcpgseek.txt newseq.txt noreturn.txt \
	notseq.txt nthseq.txt octanol.txt oddcomp.txt palindrome.txt \
	pasteseq.txt patmatdb.txt patmatmotifs.txt \
	pepcoil.txt pepinfo.txt pepnet.txt \
	pepstats.txt pepwheel.txt pepwindow.txt pepwindowall.txt \
	plotcon.txt plotorf.txt polydot.txt preg.txt prettyplot.txt \
	prettyseq.txt primersearch.txt printsextract.txt profit.txt \
	prophecy.txt prophet.txt prosextract.txt pscan.txt \
	psiphi.txt rebaseextract.txt recoder.txt redata.txt \
	remap.txt restover.txt restrict.txt revseq.txt \
	seealso.txt seqmatchall.txt seqret.txt \
	seqretsplit.txt \
	showalign.txt showdb.txt showfeat.txt showorf.txt \
	showseq.txt shuffleseq.txt sigcleave.txt silent.txt \
	sirna.txt SITE-DIRECTED.txt sixpack.txt \
	skipseq.txt splitter.txt stretcher.txt stssearch.txt \
	supermatcher.txt syco.txt tcode.txt textsearch.txt \
	tfextract.txt tfm.txt tfscan.txt tmap.txt \
	tranalign.txt transeq.txt trimest.txt trimseq.txt \
	twofeat.txt union.txt vectorstrip.txt \
	water.txt whichdb.txt wobble.txt \
	wordcount.txt wordfinder.txt wordmatch.txt \
	wossname.txt yank.txt

pkgdatadir=$(prefix)/share/$(PACKAGE)/doc/programs/text
pkgdata2dir=$(prefix)/share/$(PACKAGE)/doc/programs/text
