## Process this file with automake to produce Makefile.in

eprograms1dir = $(pkgdatadir)/doc/programs/text
eprograms2dir = $(pkgdatadir)/doc/programs/text

eprograms1_DATA = \
aaindexextract.txt \
abiview.txt \
acdc.txt \
acdlog.txt \
acdpretty.txt \
acdtable.txt \
acdtrace.txt \
acdvalid.txt \
aligncopy.txt \
aligncopypair.txt \
antigenic.txt \
assemblyget.txt \
backtranambig.txt \
backtranseq.txt \
banana.txt \
biosed.txt \
btwisted.txt \
cachedas.txt \
cachedbfetch.txt \
cacheebeyesearch.txt \
cacheensembl.txt \
cai.txt \
chaos.txt \
charge.txt \
checktrans.txt \
chips.txt \
cirdna.txt \
codcmp.txt \
codcopy.txt \
coderet.txt \
complex.txt \
compseq.txt \
cons.txt \
consambig.txt \
cpgplot.txt \
cpgreport.txt \
cusp.txt \
cutgextract.txt \
cutseq.txt \
dan.txt \
dbiblast.txt \
dbifasta.txt \
dbiflat.txt \
dbigcg.txt \
dbtell.txt \
dbxcompress.txt \
dbxedam.txt \
dbxfasta.txt \
dbxflat.txt \
dbxgcg.txt \
dbxobo.txt \
dbxreport.txt \
dbxresource.txt \
dbxstat.txt \
dbxtax.txt \
dbxuncompress.txt \
degapseq.txt \
density.txt \
descseq.txt \
diffseq.txt \
distmat.txt \
dotmatcher.txt \
dotpath.txt \
dottup.txt \
dreg.txt \
drfinddata.txt \
drfindformat.txt \
drfindid.txt \
drfindresource.txt \
drget.txt \
drtext.txt \
edamdef.txt \
edamhasinput.txt \
edamhasoutput.txt \
edamisformat.txt \
edamisid.txt \
edamname.txt \
edialign.txt \
einverted.txt \
embossdata.txt \
embossupdate.txt \
embossversion.txt \
emma.txt \
emowse.txt \
entret.txt \
epestfind.txt \
eprimer3.txt \
eprimer32.txt \
equicktandem.txt \
est2genome.txt \
etandem.txt \
extractalign.txt \
extractfeat.txt \
extractseq.txt \
featcopy.txt \
featmerge.txt \
featreport.txt \
feattext.txt \
findkm.txt \
freak.txt \
fuzznuc.txt \
fuzzpro.txt \
fuzztran.txt \
garnier.txt \
geecee.txt \
getorf.txt \
godef.txt \
goname.txt \
helixturnhelix.txt \
hmoment.txt \
iep.txt \
infoalign.txt \
infoassembly.txt \
infobase.txt \
inforesidue.txt \
infoseq.txt \
isochore.txt \
jaspextract.txt \
jaspscan.txt \
jembossctl.txt

eprograms2_DATA = \
lindna.txt \
listor.txt \
makenucseq.txt \
makeprotseq.txt \
marscan.txt \
maskambignuc.txt \
maskambigprot.txt \
maskfeat.txt \
maskseq.txt \
matcher.txt \
megamerger.txt \
merger.txt \
msbar.txt \
mwcontam.txt \
mwfilter.txt \
needle.txt \
needleall.txt \
newcpgreport.txt \
newcpgseek.txt \
newseq.txt \
nohtml.txt \
noreturn.txt \
nospace.txt \
notab.txt \
notseq.txt \
nthseq.txt \
nthseqset.txt \
octanol.txt \
oddcomp.txt \
ontocount.txt \
ontoget.txt \
ontogetcommon.txt \
ontogetdown.txt \
ontogetobsolete.txt \
ontogetroot.txt \
ontogetsibs.txt \
ontogetup.txt \
ontoisobsolete.txt \
ontotext.txt \
palindrome.txt \
pasteseq.txt \
patmatdb.txt \
patmatmotifs.txt \
pepcoil.txt \
pepdigest.txt \
pepinfo.txt \
pepnet.txt \
pepstats.txt \
pepwheel.txt \
pepwindow.txt \
pepwindowall.txt \
plotcon.txt \
plotorf.txt \
polydot.txt \
preg.txt \
prettyplot.txt \
prettyseq.txt \
primersearch.txt \
printsextract.txt \
profit.txt \
prophecy.txt \
prophet.txt \
prosextract.txt \
pscan.txt \
psiphi.txt \
rebaseextract.txt \
recoder.txt \
redata.txt \
refseqget.txt \
remap.txt \
restover.txt \
restrict.txt \
revseq.txt \
seealso.txt \
seqcount.txt \
seqmatchall.txt \
seqret.txt \
seqretsetall.txt \
seqretsplit.txt \
seqxref.txt \
seqxrefget.txt \
servertell.txt \
showalign.txt \
showdb.txt \
showfeat.txt \
showorf.txt \
showpep.txt \
showseq.txt \
showserver.txt \
shuffleseq.txt \
sigcleave.txt \
silent.txt \
sirna.txt \
sixpack.txt \
sizeseq.txt \
skipredundant.txt \
skipseq.txt \
splitsource.txt \
splitter.txt \
stretcher.txt \
stssearch.txt \
supermatcher.txt \
syco.txt \
taxget.txt \
taxgetdown.txt \
taxgetrank.txt \
taxgetspecies.txt \
taxgetup.txt \
tcode.txt \
textget.txt \
textsearch.txt \
tfextract.txt \
tfm.txt \
tfscan.txt \
tmap.txt \
tranalign.txt \
transeq.txt \
trimest.txt \
trimseq.txt \
trimspace.txt \
twofeat.txt \
union.txt \
urlget.txt \
variationget.txt \
vectorstrip.txt \
water.txt \
whichdb.txt \
wobble.txt \
wordcount.txt \
wordfinder.txt \
wordmatch.txt \
wossdata.txt \
wossinput.txt \
wossname.txt \
wossoperation.txt \
wossoutput.txt \
wossparam.txt \
wosstopic.txt \
xmlget.txt \
xmltext.txt \
yank.txt
