pkgdata_DATA = Cut.index \
               Eacica.cut Eagrtu.cut Eanasp.cut Earath.cut Eazovi.cut \
               Ebacme.cut Ebacst.cut Ebacsu.cut Ebacsu_high.cut Ebommo.cut \
               Ebovin.cut Ebpphx.cut Ebraja.cut Ebrana.cut Ebrare.cut \
               Ecaeel.cut Ecanal.cut Ecanfa.cut Ecaucr.cut Echick.cut \
               Echlre.cut Echltr.cut Ecloab.cut Ecrigr.cut Ecyapa.cut \
               Edayhoff.cut Edicdi.cut Edicdi_high.cut \
               Edrome.cut Edrome_high.cut \
               Eecoli.cut Eecoli_high.cut \
               Eemeni.cut Eemeni_mit.cut Eemeni_high.cut Eerwct.cut \
               Ehaein.cut Ehalma.cut Ehalsa.cut Ehorvu.cut Ehuman.cut \
               Eklepn.cut Eklula.cut Elacdl.cut Elyces.cut \
               Emacfa.cut Emaize.cut Emaize_chl.cut Emammal_high.cut \
               Emanse.cut Emarpo_chl.cut Emedsa.cut \
               Emetth.cut Emouse.cut Emyctu.cut \
               Eneigo.cut Eneucr.cut Eoncmy.cut Eorysa.cut Eorysa_chl.cut \
               Epea.cut Epethy.cut Ephavu.cut Epig.cut Eplafa.cut \
               Eprovu.cut Epseae.cut Epsepu.cut Epsesm.cut\
               Erabit.cut Erat.cut Erhile.cut Erhime.cut \
               Erhoca.cut Erhosh.cut \
               Esalsa.cut Esalty.cut Eschma.cut \
               Eschpo.cut Eschpo_cai.cut Eschpo_high.cut \
               Eserma.cut Esheep.cut Esoltu.cut Esoybn.cut Espiol.cut \
               Estaau.cut Estrco.cut Estrmu.cut Estrpn.cut Estrpu.cut \
               Esyncy.cut Esynco.cut \
               Etetth.cut Etheth.cut Etobac.cut Etobac_chl.cut \
               Etrybr.cut Etrycr.cut \
               Evibch.cut Ewheat.cut Exenla.cut \
               Eyeast.cut Eyeast_cai.cut Eyeast_high.cut Eyeast_mit.cut \
               Eyeren.cut Eyerpe.cut \
               Eacc.cut Eadenovirus5.cut Eadenovirus7.cut Eaidlav.cut \
               Eanasp.cut Eani.cut Eani_h.cut Eanidmit.cut Easn.cut \
               Eath.cut Eatu.cut Eavi.cut Ebja.cut Ebly.cut Ebme.cut \
               Ebmo.cut Ebna.cut Ebov.cut Ebovsp.cut Ebst.cut \
               Ebsu.cut Ebsu_h.cut Ecac.cut Ecal.cut Eccr.cut Ecel.cut \
               Echi.cut Echicken.cut Echisp.cut Echk.cut Echmp.cut \
               Echnt.cut Echos.cut Echzm.cut Echzmrubp.cut Ecpx.cut \
               Ecre.cut Ecrisp.cut Ectr.cut Eddi.cut \
               Eddi_h.cut Edog.cut Edro.cut Edro_h.cut Edrosophila.cut \
               Eeca.cut Eeco.cut Eeco_h.cut Eecoli.cut Ef1.cut \
               Efish.cut Efmdvpolyp.cut Eham.cut Ehha.cut Ehin.cut \
               Ehma.cut Ehum.cut Ekla.cut Ekpn.cut \
               Ella.cut Emac.cut Emam_h.cut Emixlg.cut \
               Emsa.cut Emse.cut Emta.cut Emtu.cut \
               Emus.cut Emussp.cut Emva.cut Emze.cut Emzecp.cut \
               Encr.cut Eneu.cut Engo.cut Eoncsp.cut Epae.cut \
               Epet.cut Epfa.cut Ephix174.cut Ephv.cut \
               Ephy.cut Epig.cut Epolyomaa2.cut Epombe.cut Epombecai.cut \
               Epot.cut Eppu.cut Epse.cut Epsy.cut Epvu.cut Erab.cut \
               Erabbit.cut Erabsp.cut Eratsp.cut Erca.cut \
               Erhm.cut Eric.cut Erle.cut Erme.cut Ersp.cut Esalsp.cut \
               Esau.cut Esco.cut Esgi.cut Eshp.cut Eshpsp.cut Esli.cut \
               Eslm.cut Esma.cut Esmi.cut Esmu.cut Esoy.cut Espi.cut \
               Espn.cut Espo.cut Espo_h.cut Espu.cut Esta.cut Esty.cut \
               Esus.cut Esv40.cut Esyhsp.cut Esynsp.cut Etbr.cut \
               Etcr.cut Eter.cut Etetsp.cut Etob.cut Etobcp.cut \
               Etom.cut Etrb.cut Evco.cut Ewht.cut Exel.cut Exenopus.cut \
               Eyeastcai.cut Eyen.cut Eysc.cut Eysc_h.cut \
               Eyscmt.cut Eysp.cut Ezebrafish.cut Ezma.cut

pkgdatadir=$(prefix)/share/$(PACKAGE)/data/CODONS
